--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,16 +4,20 @@
 <ul>
     {{#each todos}}
         <li class="todo">
-            <label>
-                {{#if completed}}
-                    <input type="checkbox" checked>
-                    <span class="completed">{{title}}</span>
-                {{/if}}
-                <input type="checkbox">
-                <span>{{title}}</span>
+            <form action="/complete" method="POST">
+                <label>
+                    {{#if completed}}
+                        <input type="checkbox" checked name="completed">
+                        <span class="completed">{{title}}</span>
+                    {{else}}
+                    <input type="checkbox" name="completed">
+                    <span>{{title}}</span>
+                    {{/if}}
 
-                <button class="btn btn-small"></button>
-            </label>
+                    <input type="hidden" name="id" value="{{_id}}">
+                    <button class="btn btn-small" type="submit">Save</button>
+                </label>
+            </form>
         </li>
     {{/each}}
 </ul>
